# florynx-os

./: .gitignore  FILES.md  README.md  RELEASE_v0.3.0.md  RELEASE_v0.4.5.md  ROADMAP.md  security_audit_report.md  task.md
docs/: architecture-diagram.md  (+6 more)
florynx-kernel/: Cargo.toml  check.json  check.txt  check_utf8.txt  x86_64-florynx.json
florynx-kernel/.cargo/: config.toml
florynx-kernel/src/: lib.rs  main.rs
florynx-kernel/src/arch/: mod.rs
florynx-kernel/src/core/: exception.rs  kernel.rs  logging.rs  mod.rs  panic.rs
florynx-kernel/src/drivers/: disk.rs  display_driver.rs  event.rs  keyboard.rs  mod.rs  mouse.rs  timer_driver.rs
florynx-kernel/src/fs/: devfs.rs  fat32.rs  inode.rs  mod.rs  mount.rs  ramdisk.rs  vfs.rs
florynx-kernel/src/gui/: animation.rs  console.rs  desktop.rs  dock.rs  dynamic_icon.rs  event.rs  event_bus.rs  font.rs  font_data.rs  hgui_link.rs  icons.rs  menubar.rs  mod.rs  renderer.rs  splash.rs  text_editor.rs  theme.rs  window.rs
florynx-kernel/src/interrupts/: apic.rs  handlers.rs  mod.rs  pic.rs
florynx-kernel/src/ipc/: channel.rs  event_bus.rs  message.rs  mod.rs
florynx-kernel/src/memory/: frame_allocator.rs  heap.rs  mapper.rs  mod.rs  paging.rs
florynx-kernel/src/process/: context.rs  exec.rs  fork.rs  mod.rs  process.rs  scheduler.rs  scheduler_v2.rs  signal.rs  task.rs
florynx-kernel/src/runtime/: mod.rs
florynx-kernel/src/security/: audit.rs  capability.rs  isolation.rs  mod.rs
florynx-kernel/src/syscall/: handlers.rs  mod.rs  table.rs  usermem.rs
florynx-kernel/src/time/: clock.rs  mod.rs  rtc.rs
(+68 files in other folders)
